--- a/Changes
+++ b/Changes
@@ -1,9 +1,10 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Add and test the nrc_sentiment() method.
 
 0.03 2018-03-03 12:17:54
-    - Add, test and illustrate an averaged_score() method.
+    - Add, test and illustrate the averaged_score() method.
 
 0.02 2018-03-03 10:04:45
     - Added the ability analyze a string, instead of just a file.
