--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Add to the example scripts.
 
 0.05 2018-03-03 19:22:54
     - Adjust nrc logic to tally sentence totals (not by words).
