--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Improve documentation a bit.
 
 0.0501 2018-03-03 20:22:25
     - Add to the example scripts.
