--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Use the superior GD::Graph::lines module in the example scripts.
 
 0.0504 2018-03-04 10:38:50
     - Fix nrc_sentiment() logic.
