--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
-    - Fix the logic of an example script.
+    - Fix the example scripts up.
     - Add lines-term to the example scripts.
+    - Up the required version of Moo!
 
 0.06 2018-03-04 17:54:00
     - Improve example scripts.
