--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Sadly, we get to rollback stemming support. :(
 
 0.09 2018-03-20 23:03:39
     - Add optional word stemming support.
