--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Add eg/opinion-loop.
 
 0.1300 2018-07-04 11:41:42
     - Modularize sentence gathering into a common routine.
