--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
     - Add eg/opinion-loop.
+    - Add eg/pos-neg
 
 0.1300 2018-07-04 11:41:42
     - Modularize sentence gathering into a common routine.
