--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
     - Add eg/pos-neg
+    - Clean attribute code.
+    - Improve documentation.
 
 0.1300 2018-07-04 11:41:42
     - Modularize sentence gathering into a common routine.
