--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Add a known/unknown familiarity attribute.
+    - Add tests.
+    - Update eg/ code with the familiarity metric.
 
 0.1301 2019-05-01 06:31:09
     - Add eg/pos-neg
