--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Lingua-EN-Opinion
 {{$NEXT}}
     - Make method synonyms for improved names.
     - Improve documentation.
+    - Clean-up code.
 
 0.1505 2019-09-20 17:59:23
     - Fix SYNOPSIS code.
