--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Lingua-EN-Opinion
     - Make method synonyms for improved names.
     - Improve documentation.
     - Clean-up code.
+    - Added test cases.
 
 0.1505 2019-09-20 17:59:23
     - Fix SYNOPSIS code.
