--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
     - Improve documentation.
-    - Multiple code fixes... see: `git log -p`
+    - Multiple code fixes... `git log -p`
     - Make method synonyms for improved names.
     - Add tests.
 
