--- a/Changes
+++ b/Changes
@@ -2,8 +2,7 @@ Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
     - Improve documentation.
-    - Multiple code fixes... `git log -p`
-    - Make method synonyms for improved names.
+    - Multiple code fixes... `git log -p` for the intrepid.
     - Add tests.
 
 0.1505 2019-09-20 17:59:23
