--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Add and test the ->set_word & ->nrc_set_word methods.
 
 0.1600 2019-09-22 08:17:06
     - Improve documentation.
