--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
+    - Update SEE ALSO link.
 
 0.1701 2021-03-12 06:45:20
     - Improve documentation.
