--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Lingua-EN-Opinion
 
 {{$NEXT}}
     - Update SEE ALSO link.
+    - Avoid implicit imports.
 
 0.1701 2021-03-12 06:45:20
     - Improve documentation.
